# zuzarule

./: .env.example  Cargo.toml
src/: bot.rs  consts.rs  errors.rs  main.rs  messages.rs  storage.rs  utils.rs
src/handler/: callback_handlers.rs  dialogue_handlers.rs  mod.rs
src/keyboards/: create_new_proposal_keyboard.rs  mod.rs  see_proposals_keyboard.rs
